--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,8 @@ jobs:
       with:
         go-version: 1.19
 
+    - name: Install tools
+      run: make init
     - name: Test
       run: make test
     - name: Build
