--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,25 +3,26 @@ name: Build & Deploy Tower
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Go
-      uses: actions/setup-go@v3
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
       with:
-        go-version: 1.19
-
-    - name: Install tools
-      run: make init
-    - name: Test
-      run: make test
-    - name: Build
-      run: make
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN_RW }}
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    - name: Build and Push Docker Image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/tower:latest
     # - name: Copy Deployment Artifacts to Node
     #   uses: appleboy/scp-action@master
     #   with:
@@ -40,4 +41,7 @@ jobs:
     #     key: ${{ secrets.SSH_PRIVATE_KEY }}
     #     script_stop: true
     #     script: |
-    #       sysctl restart tower
+    #       cd /opt/tower/deploy 
+    #       docker login --username ${{ secrets.DOCKER_HUB_USERNAME }} --password ${{ secrets.DOCKER_HUB_RO_ACCESS_TOKEN }}
+    #       docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/tower:latest
+    #       docker-compose down && docker-compose up -d
