--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
         port: ${{ secrets.PORT }}
         username: ${{ secrets.SSH_USER }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
-        source: "deploy/docker-compose.yml"
+        source: "deployment/docker-compose.yml"
         target: "/opt/tower/"
     - name: Restart Service
       uses: appleboy/ssh-action@master
@@ -41,7 +41,7 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script_stop: true
         script: |
-          cd /opt/tower/deploy 
+          cd /opt/tower/deployment 
           docker login --username ${{ secrets.DOCKER_HUB_USERNAME }} --password ${{ secrets.DOCKER_HUB_ACCESS_TOKEN_RO }}
           docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/tower:latest
           docker-compose down && docker-compose up -d
