--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,8 @@ jobs:
     environment: PROD
     runs-on: ubuntu-latest
     steps:
+    - name: echo secrets
+      run: echo "${{ secrets.HOST }} ${{ secrets.PORT }} ${{ secrets.SSH_USER }}"
     - uses: actions/checkout@v3
     - name: Login to Docker Hub
       uses: docker/login-action@v1
