--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,8 +9,6 @@ jobs:
     environment: PROD
     runs-on: ubuntu-latest
     steps:
-    - name: echo secrets
-      run: echo "${{ secrets.HOST }} ${{ secrets.PORT }} ${{ secrets.SSH_USER }}"
     - uses: actions/checkout@v3
     - name: Login to Docker Hub
       uses: docker/login-action@v1
@@ -26,15 +24,15 @@ jobs:
         file: ./Dockerfile
         push: true
         tags: ${{ secrets.DOCKER_HUB_USERNAME }}/tower:latest
-    - name: Copy Deployment Artifacts to Node
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        port: ${{ secrets.PORT }}
-        username: ${{ secrets.SSH_USER }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        source: "deployment/docker-compose.yml"
-        target: "/opt/tower/"
+    # - name: Copy Deployment Artifacts to Node
+    #   uses: appleboy/scp-action@master
+    #   with:
+    #     host: ${{ secrets.HOST }}
+    #     port: ${{ secrets.PORT }}
+    #     username: ${{ secrets.SSH_USER }}
+    #     key: ${{ secrets.SSH_PRIVATE_KEY }}
+    #     source: "deployment/docker-compose.yml"
+    #     target: "/opt/tower/"
     - name: Restart Service
       uses: appleboy/ssh-action@master
       with:
