--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,15 +24,15 @@ jobs:
         file: ./Dockerfile
         push: true
         tags: ${{ secrets.DOCKER_HUB_USERNAME }}/tower:latest
-    # - name: Copy Deployment Artifacts to Node
-    #   uses: appleboy/scp-action@master
-    #   with:
-    #     host: ${{ secrets.HOST }}
-    #     port: ${{ secrets.PORT }}
-    #     username: ${{ secrets.SSH_USER }}
-    #     key: ${{ secrets.SSH_PRIVATE_KEY }}
-    #     source: "deployment/docker-compose.yml"
-    #     target: "/opt/tower/"
+    - name: Copy Deployment Artifacts to Node
+      uses: appleboy/scp-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        port: ${{ secrets.PORT }}
+        username: ${{ secrets.SSH_USER }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        source: "deployment/docker-compose.yml"
+        target: "/opt/tower/"
     - name: Restart Service
       uses: appleboy/ssh-action@master
       with:
