--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.3"
+version: "3.5"
 
 services:
   closing-loop:
@@ -12,7 +12,7 @@ services:
     restart: always
 
 networks:
-  eldelto_net:
+  tower_net:
   caddy_net:
     name: caddy_net
     external: true
