--- a/analyzer-web/package.json
+++ b/analyzer-web/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "chart.js": "^3.9.1",
+    "color-hash": "^2.0.1",
     "esbuild": "^0.15.11"
   }
 }
