--- a/flight-controller/CMakeLists.txt
+++ b/flight-controller/CMakeLists.txt
@@ -24,11 +24,16 @@ target_compile_definitions(flight-controller PRIVATE
 pico_enable_stdio_usb(flight-controller 1)
 pico_add_extra_outputs(flight-controller)
 
-add_library(mpu6050 mpu6050.c)
-
 target_link_libraries(flight-controller 
   pico_stdlib
   pico_cyw43_arch_none
   hardware_i2c
   mpu6050
+)
+
+add_library(mpu6050 mpu6050.c)
+
+target_link_libraries(mpu6050
+  pico_stdlib
+  hardware_i2c
 )
