--- a/analyzer-web/package.json
+++ b/analyzer-web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chart.js": "^3.9.1",
     "color-hash": "^2.0.1",
-    "esbuild": "^0.15.11"
+    "esbuild": "^0.15.11",
+    "three": "^0.146.0"
   }
 }
